@@ -143,8 +143,6 @@ glabels_SOURCES = 			\
 	xml-label-04.h			\
 	pixbuf-cache.c			\
 	pixbuf-cache.h			\
-	base64.c			\
-	base64.h			\
 	merge.c				\
 	merge.h				\
 	merge-init.c			\
@@ -234,8 +232,6 @@ glabels_batch_SOURCES = 		\
 	xml-label-04.h			\
 	pixbuf-cache.c			\
 	pixbuf-cache.h			\
-	base64.c			\
-	base64.h			\
 	merge.c				\
 	merge.h				\
 	merge-init.c			\
